syntax = "proto3";

package auth;

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc Registration (RegistrationRequest) returns (AuthUserProto) {}
  rpc LoggedIn (LoggedInRequest) returns (LoggedInResponse) {}
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message RegistrationRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string bio = 4;
  string image = 5;
}

message LoggedInRequest {
  string token = 1;
}

message LoggedInResponse {
  bool valid = 1;
  AuthUserProto user = 2;
}

message AuthUserProto {
  string id = 1;
  string email = 2;
  string username = 3;
  string bio = 4;
  string image = 5;
  string password = 6;
}